--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ h2{
     text-wrap: nowrap;
     color: var(--color);
     margin: 0cm;
-    font-size: 50px;
+    font-size: 300%;
 }
 h3{
     text-wrap: nowrap;
