--- a/style.css
+++ b/style.css
@@ -1,29 +1,26 @@
 :root{
     --main-color: #2c3e50;
     --color:#a3b18a;
-    --test: ;
 }
 body{
     margin: 0px;
     box-sizing: border-box;
 }
-.containerr{
-    width:100%;
-}
 .upper{
     background-color: var(--main-color);
-    height: 100vh;
+    height: 130vh;
     display: flex;
-    justify-content: center;
     align-items: center;
     flex-direction: column;
+    overflow: hidden;
 }
 .mainimg{
-    height: 250px;
+    height: 200px;
+    margin: 0px;
 }
 h2{
     color: var(--color);
-    font-size: 300%;
+    font-size: 40px;
 }
 h3{
     font-size: 100px;
@@ -39,9 +36,10 @@ h1{
 
 .circle {
     position: relative;
-    width: 350px;  
-    height: 350px;
-    margin-top: 20px;
+    width: 250px;  
+    height: 250px;
+    margin-right: 60px;
+    margin-top: -10px;
 }
 .item {
     text-decoration: none;
@@ -60,14 +58,14 @@ h1{
     background: var(--main-color);
     color: var(--color);
 }
-@media (min-width:1000px) {
+@media (min-height:1000px) {
+    .upper{
+        height: 100vh
+    }
     .upper *{
         transform: scale(1.7);
     }
     .circle *{
-        transform: scale(1.2);
-    }
-    .circle{
-        margin-top: 170px;
+        transform: scale(1) translateY(100px);
     }
 }
