--- a/loader/loading.css
+++ b/loader/loading.css
@@ -5,15 +5,12 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-}
-.container{
-    margin-top: 80%;
-    text-align:center;
-    font-size: 40px;
+    flex-direction: column;
+    height: 100vh;
 }
 span{
+    font-size: 40px;
     display: inline-block;
-    transform: translateY(200px) ;
     color: #a3b18a;
 }
 .loader{
